update visuals of testrun view
